# HCG_Helper

./: .gitignore  Civic_L1.txt  Civic_L2.txt  Geo_L1.txt  Geo_L2.txt  README.md  SPEC.md  api.py  app.py  config.py  database.py  engine.py  ingest.py  pyproject.toml  requirements.txt
backend/: __init__.py  api.py
data/: History_L1.txt  History_L2.txt
eval/: __init__.py  chunker.py  evaluator.py  qa_generator.py  run_evaluation.py  test_evaluator.py
eval_data/: eval_dataset.json  evaluation_result.json  origin_model_comparison.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: StudentChat.css  StudentChat.js  TeacherDashboard.css  TeacherDashboard.js
rag/: __init__.py  engine.py  ingest.py  openai_test.py  qwen_reranker.py
